# pwnx

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  SETUP.md
pwnx/: __init__.py  cli.py  config.py
pwnx/ai/: reasoning.py  selector.py  xssgai_bridge.py  xssgai_model.py
pwnx/core/: dom.py  engine.py  reflected.py  stored.py
pwnx/recon/: csp.py  fingerprint.py  params.py  waf.py
pwnx/utils/: checkpoint.py  confirm.py  mutate.py  report.py
tests/: test_import.py
